--- a/.travis.yml
+++ b/.travis.yml
@@ -9,14 +9,17 @@ cache: bundler
 env:
   global:
   - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
-notifications:
-  irc:
-    on_success: change
-    on_failure: change
-    channels:
-    - irc.freenode.org#jekyll
-    template:
-    - '%{repository}#%{build_number} (%{branch}) %{message} %{build_url}'
-  email:
-    on_success: never
-    on_failure: never
+#notifications:
+  #irc:
+    #on_success: change
+    #on_failure: change
+    #channels:
+    #- irc.freenode.org#jekyll
+    #template:
+    #- '%{repository}#%{build_number} (%{branch}) %{message} %{build_url}'
+  #email:
+    #on_success: never
+    #on_failure: never
+addons:
+  code_climate:
+    repo_token: adf08323
